[package]
name = "zmq-tokio"
version = "0.0.1"
authors = ["Andreas Rottmann <a.rottmann@gmx.at>"]
license = "MIT/Apache-2.0"
description = "Tokio integation for zeromq"
repository = "https://github.com/rotty/zmq-tokio"
readme = "README.md"
edition="2018"

[dependencies]
mio = "0.6"
tokio-core = "0.1"
tokio-io = "0.1"
futures =  { version = "=0.3.0-alpha.18", package = "futures-preview", features = ["async-await", "nightly", "io-compat", "compat"] }
zmq = "~0.9"
log = "0.3"
env_logger = "0.3"
zmq-mio = { path = "zmq-mio" }
